--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.0'
     compile 'commons-cli:commons-cli:1.2'
     compile 'org.reflections:reflections:0.9.9-RC1'
-    compile 'org.slf4j:slf4j-api:1.7.2'
-    compile 'org.slf4j:slf4j-simple:1.7.2'
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.slf4j:slf4j-simple:1.7.7'
     compile 'hsqldb:hsqldb:1.8.0.10'
 //    compile 'javax.mail:javax.mail-api:1.5.1'
     compile 'javax.mail:mail:1.4'
@@ -28,6 +28,9 @@ dependencies {
     compile 'org.apache.poi:poi:3.11'
     compile 'org.codehaus.gpars:gpars:1.2.1'
     compile "org.apache.ivy:ivy:2.4.0"
+    compile "ch.qos.logback:logback-classic:1.1.3"
+    compile "ch.qos.logback:logback-core:1.1.3"
+    compile "ch.qos.logback:logback-access:1.1.3"
     ivy "org.apache.ivy:ivy:2.4.0"
     testCompile 'junit:junit:4.12'
 }
