--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ mainClassName = 'de.metacode.grip.Grip'
 
 
 repositories {
-    mavenCentral()
+    repositories {
+        maven  {
+            url "http://repo1.maven.org/maven2"
+        }
+    }
 }
 
 configurations {
@@ -29,6 +33,7 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.1.3"
     compile "ch.qos.logback:logback-core:1.1.3"
     compile "ch.qos.logback:logback-access:1.1.3"
+    compile "com.opencsv:opencsv:3.5"
     ivy "org.apache.ivy:ivy:2.4.0"
     testCompile 'junit:junit:4.12'
 }
