--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'application'
-version = '1.0'
+version = '0.1'
 mainClassName = 'de.metacode.grip.Grip'
 
 
@@ -34,6 +34,10 @@ dependencies {
     compile "ch.qos.logback:logback-core:1.1.3"
     compile "ch.qos.logback:logback-access:1.1.3"
     compile "com.opencsv:opencsv:3.5"
+    compile "org.asciidoctor:asciidoctorj:1.5.2"
+    compile "com.craigburke.document:pdf:0.4.6"
+    compile "com.craigburke.document:word:0.4.6"
+    compile "javax.servlet:javax.servlet-api:3.0.1"
     ivy "org.apache.ivy:ivy:2.4.0"
     testCompile 'junit:junit:4.12'
 }
@@ -44,6 +48,7 @@ tasks.withType(GroovyCompile) {
 
 task uberjar(type: Jar, dependsOn: [':compileJava', ':compileGroovy']) {
     from files(sourceSets.main.output.resourcesDir)
+    from files(sourceSets.main.output.classesDir) //needed for reflections-api
     from files(sourceSets.main.allSource)
     from configurations.runtime.asFileTree.files.collect { zipTree(it) }
 
