--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'org.apache.poi:poi:3.11'
     compile 'org.codehaus.gpars:gpars:1.2.1'
     compile "org.apache.ivy:ivy:2.4.0"
+    compile "org.apache.ant:ant-jsch:1.8.4"
     compile "ch.qos.logback:logback-classic:1.1.3"
     compile "ch.qos.logback:logback-core:1.1.3"
     compile "ch.qos.logback:logback-access:1.1.3"
