--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ version = '0.1'
 repositories {
     repositories {
         maven  {
-            url "http://repo1.maven.org/maven2"
+            url "https://repo1.maven.org/maven2"
         }
     }
 }
@@ -17,30 +17,30 @@ configurations {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.8'
-    compile 'commons-cli:commons-cli:1.2'
-    compile 'org.reflections:reflections:0.9.9-RC1'
-    compile 'org.slf4j:slf4j-api:1.7.7'
-    compile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.2'
-    compile 'javax.mail:mail:1.4'
-    compile 'org.apache.poi:poi:3.11'
-    compile 'org.quartz-scheduler:quartz:2.2.1'
-    compile 'org.apache.poi:poi:3.11'
-    compile 'org.codehaus.gpars:gpars:1.2.1'
-    compile "org.apache.ivy:ivy:2.4.0"
-    compile "org.apache.ant:ant-jsch:1.8.4"
-    compile "ch.qos.logback:logback-classic:1.1.3"
-    compile "ch.qos.logback:logback-core:1.1.3"
-    compile "ch.qos.logback:logback-access:1.1.3"
-    compile "com.opencsv:opencsv:3.5"
-    compile "org.asciidoctor:asciidoctorj:1.5.2"
-    compile "com.craigburke.document:pdf:0.4.6"
-    compile "com.craigburke.document:word:0.4.6"
-    compile "javax.servlet:javax.servlet-api:3.0.1"
-    compile "commons-io:commons-io:2.5"
+    implementation 'org.codehaus.groovy:groovy-all:2.5.2'
+    implementation 'commons-cli:commons-cli:1.2'
+    implementation 'org.reflections:reflections:0.9.9-RC1'
+    implementation 'org.slf4j:slf4j-api:1.7.7'
+    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.3.2'
+    implementation 'javax.mail:mail:1.4'
+    implementation 'org.apache.poi:poi:3.11'
+    implementation 'org.quartz-scheduler:quartz:2.2.1'
+    implementation 'org.apache.poi:poi:3.11'
+    implementation 'org.codehaus.gpars:gpars:1.2.1'
+    implementation "org.apache.ivy:ivy:2.4.0"
+    implementation "org.apache.ant:ant-jsch:1.8.4"
+    implementation "ch.qos.logback:logback-classic:1.1.3"
+    implementation "ch.qos.logback:logback-core:1.1.3"
+    implementation "ch.qos.logback:logback-access:1.1.3"
+    implementation "com.opencsv:opencsv:3.5"
+    implementation "org.asciidoctor:asciidoctorj:1.5.2"
+    implementation "com.craigburke.document:pdf:0.4.6"
+    implementation "com.craigburke.document:word:0.4.6"
+    implementation "javax.servlet:javax.servlet-api:3.0.1"
+    implementation "commons-io:commons-io:2.5"
     ivy "org.apache.ivy:ivy:2.4.0"
-    testCompile 'junit:junit:4.12'
-    testCompile "org.spockframework:spock-core:1.1-groovy-2.4-rc-3"
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
 }
 
 apply plugin: "io.ratpack.ratpack-groovy"
@@ -75,12 +75,13 @@ test {
 
 buildscript {
     repositories {
-        maven { url "http://oss.jfrog.org/artifactory/repo" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        // maven { url "https://oss.jfrog.org/artifactory/repo" }
         jcenter()
     }
     dependencies {
-        classpath "io.ratpack:ratpack-gradle:1.4.4"
-        classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
+        classpath "io.ratpack:ratpack-gradle:1.9.0"
+        classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
         classpath 'com.bmuschko:gradle-docker-plugin:2.0'
     }
 }
@@ -89,8 +90,8 @@ apply plugin: 'idea'
 
 idea {
     project {
-        jdkName "1.8"
-        languageLevel = '1.8'
+//        jdkName "1.8"
+//        languageLevel = '1.8'
 
         modules.each { m ->
             m.downloadSources = true
